# Acoder

./: .gitignore  Cargo.toml  README.md
src/: config.rs  core.rs  error.rs  lib.rs  main.rs  scaffold.rs  session.rs
src/agents/: collaboration.rs  commander.rs  expert.rs  mod.rs
src/api/: handlers.rs  middleware.rs  mod.rs  models.rs  rate_limiter.rs  routes.rs
src/code_understanding/: graph.rs  knowledge_graph.rs  mod.rs  parser.rs
src/code_understanding/gitnexus/: mod.rs
src/code_understanding/graphify/: mod.rs
src/codegen/: detector.rs  generator.rs  mod.rs  resolver.rs  templates.rs
src/context/: assembler.rs  compressor.rs  mod.rs  retriever.rs  splitter.rs
src/core/: traits.rs
src/debug/: mod.rs
src/editing/: mod.rs
src/editor/: ai.rs  buffer.rs  commands.rs  main.rs  mod.rs  renderer.rs  workspace.rs
src/execution/: engine.rs  mod.rs  sandbox.rs  tool_registry.rs
src/gateway/: auth.rs  mod.rs  server.rs  websocket.rs
src/gstack/: commands.rs  engine.rs  exec_log.rs  mod.rs  roles.rs  template.rs  types.rs  workspace.rs
src/hooks/: mod.rs
src/ide/: completion.rs  diagnostics.rs  lsp_server.rs  mod.rs
src/intelligence/: metrics.rs  mod.rs  outcome.rs  policy.rs
src/llm/: cache.rs  client.rs  mod.rs  prompt.rs  router.rs  streaming.rs  tokenizer_mod.rs
src/memory/: atomic.rs  consolidator.rs  embedding.rs  longterm.rs  mod.rs  session.rs  working.rs
src/merge/: mod.rs
src/observability/: metrics.rs  mod.rs
src/planning/: cot.rs  dynamic_selector.rs  failure_loop.rs  mod.rs  multi_agent.rs  planner.rs  react.rs
src/security/: approval.rs  audit.rs  mod.rs
src/security/skill_scanner/: mod.rs
src/skill/: conductor.rs  evolution.rs  mod.rs  registry.rs
src/sprint/: engine.rs  mod.rs
src/terminal/: docker.rs  local.rs  mod.rs  multiplexer.rs  ssh.rs
src/tools/: builtin.rs  health_monitor.rs  mod.rs
src/tui/: app.rs  input.rs  mod.rs  output.rs
src/ui/: checkpoint.rs  diff_viewer.rs  mod.rs  session_viewer.rs
src/utils/: mod.rs
src/webhook/: mod.rs  router.rs  server.rs
