[package]
name = "acode"
version = "0.1.0"
edition = "2021"
description = "Acode — 全流程自主编码引擎"
license = "MIT OR Apache-2.0"

[lib]
name = "acode"
path = "src/lib.rs"

[[bin]]
name = "acode"
path = "src/main.rs"

[[bin]]
name = "acode-editor"
path = "src/editor/main.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
strum = { version = "0.28", features = ["derive"] }

tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
regex = "1.11"
glob = "0.3"
ignore = "0.4"
walkdir = "2.5"
dirs = "6.0"
urlencoding = "2.1"

rusqlite = { version = "0.33", features = ["bundled"] }
serde_yaml = "0.9"
parking_lot = "0.12"

tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"

clap = { version = "4.5", features = ["derive", "wrap_help"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.27", optional = true }
indicatif = "0.17"
colored = "2.2"
dialoguer = "0.11"
ropey = "1.3"
winit = "0.30"
wgpu = "25"

once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15.7"

[features]
default = ["full"]
full = ["ratatui", "crossterm"]
sandbox = []
dev = ["full"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
